tests/ui/traits/const-traits/call-const-closure.stderr
error[E0277]: the trait bound `(): [const] Bar` is not satisfied
  --> $DIR/call-const-closure.rs:16:18
   |
LL |     (const || ().foo())();
   |                  ^^^
   |
help: make the `impl` of trait `Bar` `const`
   |
LL | impl const Bar for () {
   |      +++++

error[E0277]: the trait bound `{closure@$DIR/call-const-closure.rs:17:6: 17:14}: [const] Fn()` is not satisfied
  --> $DIR/call-const-closure.rs:17:5
   |
LL |     (const || ().foo())();
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
